@startuml
'https://plantuml.com/class-diagram

interface DataDao{
    + sortData():void
    + doAdd(int score, int month, int day, int hour, int minute):void
    + creatFile():void
    + fileWriter():void
    + fileReader():void
    + fileCopy():void
    + getMonth():int
    + getDay():int
    + getHour():int
    + getMinute():int
    + getDataTable():LinkedLIst<Data>
    + getRank():Integer
    + setUserName(String):void
    + removeByRank(int):void
    + fileSelect():void
}

class DataDaoimpi{
    - dataTable:LinkedLIst<Data>
    - easyModeFile:File
    - commonModeFile:File
    - hardModeFile:File
    + DataDaoimpi()
    + sortData():void
    + doAdd(int score, int month, int day, int hour, int minute):void
    + creatFile():void
    + fileWriter():void
    + fileReader():void
    + getMonth():int
    + getDay():int
    + getHour():int
    + getMinute():int
    + getDataTable():LinkedLIst<Data>
    + getRank():Integer
    + setUserName(String):void
    + removeByRank(int):void
    + fileSelect():void
}

DataDao <|.. DataDaoimpi

class Data{
    - dataId:int
    - userName:String
    - score:int
    - month:int
    - day:int
    - hour:int
    - minute:int
    + setDataId():void
    + getDataId():int
    + getScore():int
    + getMonth():int
    + getDay():int
    + getHour():int
    + getMinute():int
    + getUserName():String
    + setUserName():void
    + toString():String
}

Data <-- DataDaoimpi

class DataPatternDemo{
    - score:int
    - month:int
    - day:int
    - hour:int
    - minute:int
    + DataPatternDemo()
    - dataDao:DataDao
    + setScore():void
    + setMonth():void
    + setDay():void
    + setHour():void
    + getScore():void
    + addData():void
    + sort():void
    + fileCreat():void
    + fileWriter():void
    + fileReader():void
    + getDataTable():LinkedLIst<Data>
    + setUserName(String):void
    + removeByRank(ing):void
    + fileSelect():void
    + fileAction():void
}

DataDao <.. DataPatternDemo

@enduml